@@ -8,6 +8,8 @@ xine-lib (1.1.10) (unreleased)
     end authors should be careful with xine-lib older than 1.1.10.
   * Backported xine-config & libxine.pc from 1.2.
     Consequently, xine-config now requires pkg-config.
+  * Sanity-check ASF header sizes. This fixes a crash in the ASF demuxer,
+    caused by the example exploit given for CVE-2006-1664.
 
 xine-lib (1.1.9.1) 2008-01-11
   * Security fixes:
